--- a/renderer/package.json
+++ b/renderer/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/liftedsubaru/liftedsubarusite#readme",
   "dependencies": {
     "friendly-url": "^1.0.3",
+    "gulp": "^3.9.1",
     "handlebars": "^4.0.11",
     "moment": "^2.22.2"
   },
@@ -26,6 +27,10 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1"
+    "eslint-plugin-react": "^7.6.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-declare": "^0.3.0",
+    "gulp-handlebars": "^5.0.2",
+    "gulp-wrap": "^0.14.0"
   }
 }
